# job-search-agent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: data_sources.md
scripts/: load_hf_corpus.py  probe_sources.py
src/job_search_agent/: db.py  filters.py  ingest.py  logger.py  models.py  pipeline.py  scheduler.py
src/job_search_agent/collectors/: base.py  huggingface.py  remote_ok.py  the_muse.py
tests/: test_filters.py  test_ingest.py  test_models.py  test_scheduler.py
tests/collectors/: test_huggingface.py  test_remote_ok.py  test_the_muse.py
